--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "*",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.8",
+        "symfony/http-client": "^7.2",
+        "symfony/mailgun-mailer": "^7.1",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
